fix z-index of navbar vs map

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -31,7 +31,7 @@
   position: fixed;
   background-color: var(--primary-color);
   color: var(--secondary-color);
-  z-index: 5;
+  z-index: 500;
 }
 
 .navbar_links {
